2006-12-21  Sven Schuetz

	* cimslp.h, cimslp.c, sfcBroker.c:
	Fixed 1620005: unnecessary fork when slp is enabled
	
	* interopServerProvider:
	Fixed 1620020: allocation error in interopServerProvider

2006-12-19  Adrian Schuur

	* msgqueue.c: 
	Fixed 1616130: bad message during shutdown. Also fixes some
	valgrind complaints.

2006-12-18  Sven Schuetz
	* cimslpCMPI.c, cimslp.c, cimslpCMPI.h, cimslpSLP.c, 
	Fixed 1618258: slp problems when ssl is enabled

2006-12-18  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* array.c, cimXmlGen.c, cimXmlRequest.c, objectImpl.c, objectpath.c: 

	Fixed 1618216: corrected handling of references in arrays, null
	argument handling and formatting of resultvalues.
	
2006-12-14  Sven Schuetz
	* cimslpCMPI.c, cimslp.h, trace.h, trace.c, cimslp.c, Makefile.am, 
	cimslpCMPI.h, cimslpUtil.h, cimslpSLP.h, cimslpSLP.c:
	Fixed 1615731: slp enhancements (shutdown, tracing)

2006-12-14  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-70.boeblingen.de.ibm.com>

	* cimXmlOps.y, cimXmlGen.c: 
	Fixed 1615776: parsing of PARAMVALUE xml (empty ones and arrays).

	* cimXmlGen.c: 
	Fixed 1613172: generation of PARAMVALUE xml for references
	and arrays.
	
2006-12-13  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* internalProvider.c: 
	Fixed 1529134: internal provider associator operations
	
2006-12-12  Sven Schuetz

	* cimslpCMPI.c:
	Fixed 1614075: enabling slp can lead to a segfault

	* internalProvider.c, brokerEnc.c:
	Fixed 1613936: associator call fails when role parameters are set

	* cimXmlGen.c, objectImpl.c:
	Fixed 1613933: embedded Objects in Indications do not work

2006-12-12  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* array.c, providerMgr.c: 
	Fixed 1613925: use of non-tracked array operations allows
	to release the array of provider-infos properly.

2006-12-06  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* Makefile.am, libsfcUtil.Versions:
	Fixed 1610514: aligned sfcc/sfcb libsfcUtil
