@@ -352,7 +352,7 @@ CMPIArray *native_make_CMPIArray(CMPIData * av, CMPIStatus * rc,
 	      arraySetElementNotTrackedAt((CMPIArray *) array, i, (CMPIValue *) chars, CMPI_chars);
 	  } else if (av[i + 1].type == CMPI_ref) {
 	      CMPIValue value;
-	      char msg[10] = "";
+	      char *msg = "";
 	      char *chars = (char *) ClObjectGetClString(hdr, (ClString *) & av[i + 1].value.chars);
 	      value.ref = getObjectPath(chars,&msg);	      
 	      arraySetElementNotTrackedAt((CMPIArray *) array, i, &value, CMPI_ref);
